# inferno

./: Cargo.toml  build.rs
.cargo/: config.toml
kernels/: commom.cuh  unary.cu
kernels/unary/: copy.cu
src/: lib.rs  linear.rs  main.rs  model.rs  tensor.rs
tests/: linear.rs
